[package]
name = "screenland"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image"]}
iced_aw = "0.13.0"
grim-rs = "0.1.1"
tokio = { version = "1.49.0", features = ["full"] }
image = "0.25.9"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }